--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "protoc-gen-validate"]
 	path = protoc-gen-validate
-	url = git@github.com:bufbuild/protoc-gen-validate.git
+	url = https://github.com/bufbuild/protoc-gen-validate.git
 [submodule "lib/protoc-gen-validate"]
 	path = lib/protoc-gen-validate
-	url = git@github.com:bufbuild/protoc-gen-validate.git
+	url = https://github.com/bufbuild/protoc-gen-validate.git
