--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "naas_models"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 protobuf = ">=3.19.0,<3.20.0"
+protobuf-to-pydantic = "^0.1.7.3"
 
 
 [build-system]
