--- a/.github/.releaserc
+++ b/.github/.releaserc
@@ -13,6 +13,12 @@
     "plugins": [
         "@semantic-release/commit-analyzer",
         "@semantic-release/release-notes-generator",
-        "@semantic-release/github"
+        "@semantic-release/github",
+        [
+            "semantic-release-pypi",
+            {
+                "srcDir": "./python"
+            }
+        ]
     ]
 }
