--- a/.github/package.json
+++ b/.github/package.json
@@ -2,7 +2,8 @@
     "name": "naas-models",
     "version": "0.0.1",
     "devDependencies": {
-      "semantic-release": "^19.0.5"
+      "semantic-release": "^19.0.5",
+      "semantic-release-pypi": "^3.0.0"
     }
   }
   
