--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -19,13 +19,14 @@ RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 RUN go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 ENV PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/root/go/bin"
 
-RUN python3 -m pip install virtualenv --break-system-packages
+RUN python3 -m pip install poetry --break-system-packages
 
 # Removing version pining to try to follow new versions.
-RUN bash -c 'virtualenv venv \
-    && source venv/bin/activate \
-    && python3 -m pip install --upgrade pip \
-    && pip install protobuf-to-pydantic protobuf-to-pydantic[mypy-protobuf] protobuf protobuf2pydantic grpcio-tools'
+# RUN bash -c 'virtualenv venv \
+#     && source venv/bin/activate \
+#     && python3 -m pip install --upgrade pip \
+#     && pip install protobuf-to-pydantic[mypy-protobuf]=="0.2.6.2" protobuf grpcio-tools'
+# #    && pip install protobuf-to-pydantic=="0.1.7.4" protobuf-to-pydantic[mypy-protobuf]=="0.1.7.4" protobuf protobuf2pydantic grpcio-tools'
 
 
 #ENTRYPOINT ["/usr/local/bin/protoc"]
