--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "naas_models"}]
 python = "^3.9"
 protobuf-to-pydantic = {version = "0.2.6.2", extras = ["mypy-protobuf"]}
 protobuf = "^5.26.1"
+pydantic = "^2.0"
 
 
 [tool.poetry.group.dev.dependencies]
