--- a/.github/package.json
+++ b/.github/package.json
@@ -2,8 +2,8 @@
     "name": "naas-models",
     "version": "0.0.1",
     "devDependencies": {
-      "semantic-release": "^19.0.5",
-      "semantic-release-pypi": "^3.0.0"
+      "semantic-release": "24.2.1",
+      "semantic-release-pypi": "4.1.1"
     }
   }
   
