fix: Working on fixing release

--- a/.github/.releaserc
+++ b/.github/.releaserc
@@ -17,7 +17,8 @@
         [
             "semantic-release-pypi",
             {
-                "srcDir": "./python"
+                "srcDir": "./python",
+                "distDir": "./python/dist"
             }
         ]
     ]
