fix: Bump release system

--- a/.github/.releaserc
+++ b/.github/.releaserc
@@ -17,8 +17,7 @@
         [
             "semantic-release-pypi",
             {
-                "srcDir": "./python",
-                "distDir": "./python/dist"
+                "srcDir": "./python"
             }
         ]
     ]
